# rstb-generator

./: Cargo.toml  License.md  Readme.md
.github/workflows/: deploy.yml
src/: generator.rs  main.rs  util.rs
